@@ -509,9 +509,8 @@ public class ExtensionBuilder {
        applyDefaultSettings(procNode);
        applyDefaultRunDuration(procNode);
 
-       final Stateful stateful = processor.getComponent().getClass().getAnnotation(Stateful.class);
-       final boolean dropStateKeySupported = stateful != null && stateful.dropStateKeySupported();
-       stateManagerProvider.getStateManager(identifier, dropStateKeySupported);
+       // Ensure StateManager is initialized with component's Stateful capabilities
+       getStateManagerForComponent(identifier, processor.getComponent().getClass());
 
        return procNode;
    }
@@ -532,9 +531,8 @@ public class ExtensionBuilder {
            taskNode.setName(componentType);
        }
 
-       final Stateful stateful = reportingTask.getComponent().getClass().getAnnotation(Stateful.class);
-       final boolean dropStateKeySupported = stateful != null && stateful.dropStateKeySupported();
-       stateManagerProvider.getStateManager(identifier, dropStateKeySupported);
+       // Ensure StateManager is initialized with component's Stateful capabilities
+       getStateManagerForComponent(identifier, reportingTask.getComponent().getClass());
 
        return taskNode;
    }
@@ -544,7 +542,7 @@ public class ExtensionBuilder {
    }
 
    private ParameterProviderNode createParameterProviderNode(final LoggableComponent<ParameterProvider> parameterProvider, final boolean creationSuccessful) {
-       final ValidationContextFactory validationContextFactory = new StandardValidationContextFactory(serviceProvider, ruleViolationsManager, flowAnalyzer);
+       final ValidationContextFactory validationContextFactory = createValidationContextFactory(serviceProvider);
        final ParameterProviderNode parameterProviderNode;
        if (creationSuccessful) {
            parameterProviderNode = new StandardParameterProviderNode(parameterProvider, identifier, flowController,
@@ -561,15 +559,14 @@ public class ExtensionBuilder {
            parameterProviderNode.setName(componentType);
        }
 
-       final Stateful stateful = parameterProvider.getComponent().getClass().getAnnotation(Stateful.class);
-       final boolean dropStateKeySupported = stateful != null && stateful.dropStateKeySupported();
-       stateManagerProvider.getStateManager(identifier, dropStateKeySupported);
+       // Ensure StateManager is initialized with component's Stateful capabilities
+       getStateManagerForComponent(identifier, parameterProvider.getComponent().getClass());
 
        return parameterProviderNode;
    }
 
    private FlowRegistryClientNode createFlowRegistryClientNode(final LoggableComponent<FlowRegistryClient> client, final boolean creationSuccessful) {
-       final ValidationContextFactory validationContextFactory = new StandardValidationContextFactory(serviceProvider, ruleViolationsManager, flowAnalyzer);
+       final ValidationContextFactory validationContextFactory = createValidationContextFactory(serviceProvider);
        final StandardFlowRegistryClientNode clientNode;
 
        if (creationSuccessful) {
@@ -682,9 +679,7 @@ public class ExtensionBuilder {
            final ComponentLog serviceLogger = new SimpleProcessLogger(identifier, serviceImpl, new StandardLoggingContext(null));
            final TerminationAwareLogger terminationAwareLogger = new TerminationAwareLogger(serviceLogger);
 
-           final Stateful stateful = serviceImpl.getClass().getAnnotation(Stateful.class);
-           final boolean dropStateKeySupported = stateful != null && stateful.dropStateKeySupported();
-           final StateManager stateManager = stateManagerProvider.getStateManager(identifier, dropStateKeySupported);
+           final StateManager stateManager = getStateManagerForComponent(identifier, serviceImpl.getClass());
 
            final ControllerServiceInitializationContext initContext = new StandardControllerServiceInitializationContext(identifier, terminationAwareLogger,
                    serviceProvider, stateManager, kerberosConfig, nodeTypeProvider);
@@ -765,7 +760,7 @@ public class ExtensionBuilder {
        }
 
        if (!cobundledApis.isEmpty()) {
-           final String message = String.format("Controller Service %s is bundled with its supporting APIs %s. The service APIs should not be bundled with the implementations.",
+           final String message = "Controller Service %s is bundled with its supporting APIs %s. The service APIs should not be bundled with the implementations.".formatted(
                originalExtensionType.getName(), org.apache.nifi.util.StringUtils.join(cobundledApis.stream().map(Class::getName).collect(Collectors.toSet()), ", "));
            throw new InstantiationException(message);
        }
@@ -863,9 +858,8 @@ public class ExtensionBuilder {
            ruleNode.setName(componentType);
        }
 
-       final Stateful stateful = flowAnalysisRule.getComponent().getClass().getAnnotation(Stateful.class);
-       final boolean dropStateKeySupported = stateful != null && stateful.dropStateKeySupported();
-       stateManagerProvider.getStateManager(identifier, dropStateKeySupported);
+       // Ensure StateManager is initialized with component's Stateful capabilities
+       getStateManagerForComponent(identifier, flowAnalysisRule.getComponent().getClass());
 
        return ruleNode;
    }
@@ -961,5 +955,14 @@ public class ExtensionBuilder {
                Thread.currentThread().setContextClassLoader(ctxClassLoader);
            }
        }
+   }
+
+   /**
+    * Determines Stateful drop key support for the given component class and obtains the corresponding StateManager.
+    */
+   private StateManager getStateManagerForComponent(final String componentId, final Class<?> componentClass) {
+       final Stateful stateful = componentClass.getAnnotation(Stateful.class);
+       final boolean dropStateKeySupported = stateful != null && stateful.dropStateKeySupported();
+       return stateManagerProvider.getStateManager(componentId, dropStateKeySupported);
    }
 }
